# ADA

./: .gitignore  README.md  ada.py  pyproject.toml  requirements-dev.tx  requirements-dev.txt  requirements.txt
src/: ada.py  ada_interface.py  hardware_interface.py
src/database/: database_interface.py  json_database.py
src/database/implementations/: json_database.py
src/database/interfaces/: database_interface.py
src/hardware/implementations/: continuous_mfrc522_scanner.py  continuous_switch_monitor.py  mfrc522_reader.py  pi_gpio_switch_operator.py  pi_gpio_switch_reader.py
src/hardware/interfaces/: continuous_monitoring_interface.py  hardware_interface.py  mfrc522_scanner_interface.py  rfid_reader_interface.py  toggle_interface.py  toggle_monitoring_interface.py
src/managers/interfaces/: access_control_manager_interface.py  configuration_manager_interface.py  database_manager_interface.py  event_manager_interface.py  hardware_interactions_manager_interface.py  member_management_manager_interface.py
src/schemas/: member_schema.py  member_schema.pyt
src/utils/: logging_utils.py  threading_shared_variable.py
tests/database/: test_json_database.py
tests/database/implementations/: test_json_database.py
tests/database/interfaces/: test_database_interface.py
tests/hardware/implementations/: test_continuous_mfrc522_scanner.py  test_continuous_switch_monitor.py  test_mfrc522_reader.py  test_pi_gpio_switch_operator.py  test_pi_gpio_switch_reader.py
tests/hardware/interfaces/: test_continuous_monitoring_interface.py  test_hardware_interface.py  (+3 more)
